fix dialog overlap on mobile

--- a/frontend/src/components/pages/app-receipt-extraction/select-category-dialog/select-category-dialog.scss
+++ b/frontend/src/components/pages/app-receipt-extraction/select-category-dialog/select-category-dialog.scss
@@ -5,7 +5,7 @@
     position: relative;
     max-height: 95vh;
     overflow-y: scroll;
-    min-width: 50rem;
+    max-width: 50rem;
 
     &-header {
       position: sticky;
